--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "latest",
+  "name": "myapp",
   "version": "0.0.1",
-  "author": "Ionic Framework",
+  "author": "Dinesh",
   "homepage": "https://ionicframework.com/",
+  "main": "main.js",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port 4401",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "electronrun": "ng build --prod && electron .",
+    "linux-release": "electron-packager . myapp --overwrite --asar=true --platform=linux --arch=x64 --icon=src/assets/icon/favicon.png --prune=true --out=dist",
+    "linux-deb": "electron-installer-debian --src dist/latest-linux-x64/ --dest dist/installers/ --arch amd64"
   },
   "private": true,
   "dependencies": {
@@ -24,7 +28,10 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "@ionic/pro": "2.0.4",
+    "cordova-android": "8.1.0",
     "core-js": "^2.5.4",
+    "electron-pos-printer": "^1.1.1",
+    "my-lib": "file:my-lib-0.0.1.tgz",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -43,6 +50,15 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^4.1.3",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "electron": "^7.1.1",
+    "electron-installer-debian": "^2.0.1",
+    "electron-packager": "^14.1.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -55,5 +71,20 @@
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android"
+    ]
+  }
 }
